# FibexConverter

./: .flake8  .gitmodules  README.md  abstract_parser.py  configuration_base_classes.py  configuration_to_flync.py  configuration_to_peach.py  configuration_to_reports.py  configuration_to_text.py  configuration_to_topology.py  configuration_to_wireshark_config.py  fibex_parser.py  flync_parser.py  local_checkers.sh  parser.py  parser_dispatcher.py  pyproject.toml  requirements.txt
docs/: fibex_flync_mapping.md
examples/: CANFD_example.xml  CAN_Multiplex_example.xml  CAN_example.xml  CAN_multi_pdu_example.xml  DoIP_example.xml  Dual_Switch_Same_ECU.xml  Ethernet_PDU_example.xml  Ethernet_Topology_with_Switches.xml  Incoherent_ECU_Switch_Topology.xml  SOMEIP_Array_Union_Struct.xml  SOMEIP_Enhanced_Testability_Service.xml  SOMEIP_IPv6_service.xml  SOMEIP_Multiple_AEPs.xml  SOMEIP_Nonstandard_Netmask.xml  SOMEIP_simple_service.xml
plugins/: example_fibex_parser_plugin.py
tests/: __init__.py  requirements.txt  test_abstract_parser.py  test_all_tools_on_examples.py  test_configuration_base_classes.py  test_configuration_to_text.py  test_configuration_to_text_real_files.py  test_configuration_to_topology.py  test_configuration_to_wireshark.py  test_doip_example_flync.py  test_ets_example_file.py  test_fibex_flync_full_text_roundtrip.py  test_fibex_flync_roundtrip.py  test_fibex_parser.py  test_fibex_parser_real_files.py  test_fibex_schema_validation.py  test_parser_dispatcher.py  test_someip_empty_aep_flync.py  test_someip_ipv6_flync.py  (+1 more)
tools/: validate_fibex.py
(+3 files in other folders)
